# pydepcheck

./: README.md  pyproject.toml
pydepcheck/: __init__.py  analyzer.py  dependences.py
pydepcheck/passes/: expand_aug_assign.py  rewrite_range.py
tests/: test_analyzer.py
