[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydepcheck"
version = "0.1.0"
description = "Analyze Python loop nest dependences."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Tong Zhou", email = "zt9465@gmail.com" }
]
dependencies = []

[tool.setuptools.packages.find]
exclude = ["tests*"]